// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`writeBrowserEntry > snapshot 1`] = `
"// auto-generated by Solas

import { browser } from '@jk2908/solas/env/browser'

browser()
"
`;

exports[`writeCloudflareEntry > snapshot 1`] = `
"// auto-generated by Solas

import { createWorker } from '@jk2908/solas/cloudflare'

import { manifest } from './manifest.js'
import { importMap } from './maps.js'
import { config } from './config.js'

export default createWorker({ config, manifest, importMap })
"
`;

exports[`writeRSCEntry > snapshot 1`] = `
"// auto-generated by Solas

import { createRuntimeHandler } from '@jk2908/solas/env/rsc'

import { manifest } from './manifest.js'
import { importMap } from './maps.js'
import { config } from './config.js'

export default await createRuntimeHandler(config, manifest, importMap)

if (import.meta.hot) {
	import.meta.hot.accept()
}
"
`;

exports[`writeSSREntry > snapshot 1`] = `
"// auto-generated by Solas

export { prerender, resume, ssr } from '@jk2908/solas/env/ssr'
"
`;
